assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap');

body {
    font-family: Roboto, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
    background-color: white;
    overflow-x: hidden;
    padding-bottom: 120px;
}

header {
    background-color: black;
    width: 100%;
    height: 10%;
    font-size: 24px;
    font-family: Oswald, sans-serif;
    position: absolute;
    top: 0; 
    left: 0;
}
nav ul {
    text-align: center;

}

nav li {
    
    margin-right: 40px;
    margin-left: 40px;
    display: inline-block;
    
}

nav a {
    text-decoration: none;
    color: #3a3a3a;
}

nav,
#name {
    line-height: 75px;
}

nav a:hover {
    border-bottom: 3px dotted #3a3a3a;
}

.active {
    border-bottom: 3px solid #3a3a3a;
}

#banner {
    height: 1000px;
}

hr {
    width: 50%;
    border-style: dashed;
}

#name {
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    color: #3a3a3a;
    letter-spacing: 4px;
}

nav ul {
    text-align: center;

}

nav li {
    
    margin-right: 40px;
    margin-left: 40px;
    display: inline-block;
    
}

nav a {
    text-decoration: none;
    color: white;
}

nav a:hover {
    border-bottom: 3px dotted white;
}

.active {
    border-bottom: 3px solid white;
}

#photo {
    width: 30%;
    position: absolute;
    left: 60%;
    border-radius: 50%;
    top: 25%;
}

#intro {
    position: absolute;
    top: 50%;
    left: 20%;
    font-size: 20px;
    text-align: center;
    
  }

  #bio {
    max-width: 50%;
    text-align: center;
    position: absolute;
    left: 25%;
    font-size: 18px;
    height: 200px;
    top: 1000px;
    
  }

  #footer1 {
    position: absolute;
    height: 80px;
    background-color: black;
    width: 100%;
    top: 1200px;
    left: 0;
    color: white;
  }

  .resume {
    
    width: 100%;
    padding: 20px;
    font-family: Roboto, sans-serif;
    font-size: 16px;
    color: #3a3a3a;
    position: absolute;
    position: absolute;
    top: 60%;
    left: 0;
    width: 100%;
    height: 100%;
    color: black;
  }
  
  #banner2 {
    position: absolute;
    margin-bottom: 40px;
    height: 50%;
    width:100%;
    left: 0;
    top: 10%;
    font-size: x-large;
    text-align: center;
    letter-spacing: 4px;
    text-transform: uppercase;
    background-color: white;
  }
  
  #photo2 {
    height: 100%;
    position: absolute;
    left: 0;
  }
  
  #name2 {
    font-family: oswald, sans-serif;
    font-size: 36px;
    padding-top: 50px;
  }
  
  p {
    margin: 5px 0;
  }
  
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }
  
  .section {
    margin-bottom: 40px;
  }
  
  h2 {
    font-family: oswald, sans-serif;
    font-size: 30px;
    margin-bottom: 20px;
    font-weight: bolder;
  }
  
  h3 {
    font-size: 20px;
    margin-bottom: 10px;
  }
  
  p, li {
    line-height: 1.5;
  }


  .section {
    width: 100%;
    text-align: center;
   
  }

  .section ul {
    list-style: disc;
    text-align: left;
    max-width: 50%;
    position: absolute;
    left: 25%;
    
  }

  #footer2 {
    position: absolute;
    top: 2000px;
    background-color: black;
  }

@media (max-width: 600px) {
    nav {
      font-size: 14px;
    }
    
    nav ul {
      text-align: center;
    }
  
    nav li {
      margin-right: 20px;
      margin-left: 20px;
    }

    #banner {
        max-height: 400px;
    }
    #intro {
        position: absolute;
        top: 33%;
        left: 20px;
        font-size: 10px;
        text-align: center;
      }
      #photo {
        width: 20%;
        position: absolute;
        left: 70%;
        border-radius: 50%;
        top: 30%;
      }

      #bio {
        max-width: 80%;
        left: 10%;
        font-size: 14px;
        top: 70%;
      }



      #footer1 {
        top: 100%;
      }
  }

  

